--- a/css/styles_basic.css
+++ b/css/styles_basic.css
@@ -1,96 +1,126 @@
-body {
-    font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #1a1a1a;
-    background-color: #599e4b;
+*
+{
+    box-sizing: border-box;
+}
+body
+{
+    font-family: sans-serif;
 }
 
+/* start of nav css */
 
-/** HEADER **/
-
-#header-nav {
-    background-color: #c98715;
-    border-radius: 0;
-    border: 0;
+#navid
+{
+    background-color: gray;
+    border-radius: 0px;
+    border: 1px solid black;
 }
 
-#header-nav button {
-    margin-top: 22px;
+#navtext
+{
+    font-size: 1.5em;
+    color: black;
+    padding-top: 10px;
+    padding-left: 15px;
+    margin: 0px;
+}
+#navcontainer
+{
+    padding: 8px 0 0 0;
+    margin-left: 20px;
+    margin: 0px;
+}
+#pageheading
+{
+    font-size: 1.7em;
+    color: black;
+    text-transform: capitalize;
+    font-weight: 550;
+    margin: 0px;
+}
+#navbarbutton
+{
+    border:1px solid black;
+    background-color: black;
+}
+#navbarbutton:hover
+{
+    background-color: rgb(163, 152, 152);
+}
+#navbarbutton:hover .icon-bar
+{
+    border:1px solid black;
+    background-color: black;
+}
+#navbarbutton .icon-bar
+{
+    border:1px solid rgb(163, 152, 152);
+    background-color: rgb(163, 152, 152);
+}
+#dropdown
+{
+    margin: 0px;
+    width: 100%;
+    padding: 0px;
 }
 
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #fce29e;
+#dropdownlist
+{
+    margin: 0px;
+    /* border: 1px solid black; */
+}
+.listelement
+{
+    text-transform: capitalize;
+    font-size: 1.4em;
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+}
+.listelement:hover
+{
+    background-color: gray;
+    color: white;
+}
+/* end of nav css */
+
+/* start of main content css */
+
+
+@media (min-width:768px)
+{
+    #maincontent
+    {
+    width: 95%;
+    }
+}
+@media (max-width:767px)
+{
+    #maincontent
+    {
+    width: 75%;
+    }
+}
+.box
+{
+    padding-top:10px;
+    border: 1px solid black;
+    margin: 10px;
+    color: black;
+    background-color: gray;
+    width: 100%;
 }
 
-.navbar-collapse {
-    border-top: 0;
+.boxheading
+{
+    text-align: center;
+    font-weight: 550;
+    font-size: 1.5em;
+    text-transform: capitalize;
 }
 
-.navbar-brand, .navbar-nav li a {
-    line-height: 76px;
-    height: 76px;
-    padding-top: 0;
+.boxtext
+{
+    font-size: 1.5em;
+    text-transform: capitalize;
 }
-
-.navbar-brand h1 {
-    color: #7d1913;
-    font-family: 'Abril Fatface', cursive;
-    font-weight: bolder;
-    font-size: 1.8em;
-}
-
-.navbar-brand a:hover {
-    text-decoration: none;
-    text-shadow: 1px 1px 1px #fe9797;
-}
-
-#nav-list {
-    background-color: #e4af34;
-}
-
-#nav-list a {
-    font-weight: bolder;
-    color: #282828;
-    font-size: 1.2em;
-}
-
-#nav-list a:hover {
-    color: #202020;
-    background-color: #fce29e;
-}
-
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #7d1913;
-}
-
-
-/** END HEADER */
-
-
-/** HOME PAGE **/
-
-#main-content {
-    width: 92%;
-    margin-bottom: 40px;
-}
-
-#main-content h2 {
-    font-size: 2.9em;
-    font-weight: bold;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-
-#main-content h3 {
-    font-size: 1.6em;
-    font-weight: bold;
-    margin-bottom: 1em;
-}
-
-#main-section {
-    background-color: #82d06b;
-    box-shadow: 0 0 50px #0f5900;
-    padding: 30px;
-}
-
-/** END HOME PAGE **/
